crates/aranya-policy-compiler/tests/data/commands/no_return_in_open.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: missing return statement
  |
4 |     open { let x = 3 }
  |            ^^^^^^^^^^ no return found in this body
